<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="20dp"
    android:backgroundTint="@color/material_theme_sys_dark_surface_container_low"
    app:cardCornerRadius="28dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_title"
            android:textColor="@color/material_theme_sys_dark_on_surface"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/email_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/material_theme_sys_dark_on_surface"
            android:textSize="16sp"
            tools:text="@string/acc_email_sent_label" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/acc_common_label"
            android:textColor="@color/material_theme_sys_dark_on_surface"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/responseError"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/material_theme_sys_dark_error"
            android:textSize="14sp"
            android:visibility="gone"
            tools:text="Аккаунт не существует, проверьте данные"
            tools:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/auth_acc_resend_button"
            style="@style/CustomSecondButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/acc_resend_button"
            android:textAllCaps="false"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/nav_my_bar"
            style="@style/FilledPrimeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/acc_apply_button"
            android:textAllCaps="false"
            android:textSize="14sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</com.google.android.material.card.MaterialCardView>