<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cocktails_navigation"
    app:startDestination="@id/cocktailsFragment">

    <fragment
        android:id="@+id/cocktailsFragment"
        android:name="ru.partyshaker.partyshaker.ui.features.cocktails.ui.CocktailsFragment"
        android:label="@string/title_cocktails"
        tools:layout="@layout/fragment_cocktails">
        <action
            android:id="@+id/action_cocktailsFragment_to_cocktailCardFragment"
            app:destination="@id/cocktailCardFragment"
            app:popUpToSaveState="true"
            app:restoreState="true" />
        <action
            android:id="@+id/action_cocktailsFragment_to_cocktailsFilterFragment"
            app:destination="@id/cocktailsFilterFragment"
            app:popUpToSaveState="true"
            app:restoreState="true" />
    </fragment>
    <fragment
        android:id="@+id/cocktailsFilterFragment"
        android:name="ru.partyshaker.partyshaker.ui.features.cocktails_filter.ui.CocktailsFilterFragment"
        android:label="@string/title_cocktails_filter"
        tools:layout="@layout/fragment_cocktails_filter" />
    <fragment
        android:id="@+id/cocktailCardFragment"
        android:name="ru.partyshaker.partyshaker.ui.features.cocktail_card.ui.CocktailCardFragment"
        android:label="@string/title_cocktail"
        tools:layout="@layout/fragment_cocktail_card" />
</navigation>