<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/material_theme_sys_dark_surface_container_low"
    app:cardCornerRadius="28dp">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_ingredients"
                android:textColor="@color/material_theme_sys_dark_on_surface"
                android:textSize="22sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/material_theme_sys_dark_surface_container_high"
                app:cardCornerRadius="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/cocktails_filter_search_hint"
                        android:textColorHint="@color/material_theme_sys_dark_on_surface_variant"
                        app:boxStrokeWidth="0dp"
                        app:boxStrokeWidthFocused="0dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/cocktails_filter_search_input"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@android:color/transparent"
                            android:paddingStart="18dp"
                            android:singleLine="true"
                            android:textColor="@color/material_theme_sys_dark_on_surface_variant"
                            android:textSize="16sp"
                            tools:text="HELLO" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Space
                        android:layout_width="12dp"
                        android:layout_height="match_parent" />

                    <ImageButton
                        android:id="@+id/cocktails_filter_search_apply_button"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="0.2"
                        android:background="@android:color/transparent"
                        android:padding="12dp"
                        android:src="@drawable/ic_search"
                        app:tint="@color/material_theme_sys_dark_on_surface_variant"
                        android:contentDescription="@string/search_icon" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ingredients_chip_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <Button
                android:id="@+id/ingredients_show_more_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="false"
                android:textColor="@color/material_theme_sys_dark_primary"
                android:textSize="14sp"
                android:visibility="gone"
                tools:text="@string/filter_show_more_button_unfold"
                tools:visibility="visible" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.cardview.widget.CardView>